--- a/workflows/deployawslambda.yml
+++ b/workflows/deployawslambda.yml
@@ -44,5 +44,5 @@ jobs:
     - name: AWS Lambda Deploy
       uses: appleboy/lambda-action@v0.0.4
       with:
-        function_name: githubdemo
+        function_name: myfunction
         zip_file: bundle.zip
